--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,19 @@ footer {
     }
 }
 
+.self-intro{
+    padding: 1rem 2rem;
+    border-left: 5px dashed #000;
+    background: #f4f4f4;
+}
+
+.pre-title{
+    padding:0 .4em .2em;
+    border-bottom: 3px dotted #1c927a;
+    background-color: #ffffff;
+    color: #333333;
+}
+
 .animate {
     font-family: 'Arial', sans-serif;
     animation: slideIn 1s forwards;
