--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+img {
+    max-width: 100%;  /* 親要素に対して画像の最大幅を100%に設定 */
+    height: auto;     /* 高さを自動調整して縦横比を維持 */
+    display: block;   /* 画像の下に余白ができないようにする */
+    margin: 0 auto;   /* 画像を中央に配置 */
+}
+
+.main {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    padding: 10px;
+}
+
+footer {
+    background-color: #eee;
+    padding: 10px;
+    position: relative;  /* 固定を解除して、フローに合わせて配置 */
+    bottom: 0;
+    width: 100%;
+}
+
+
 .sns {
     margin: 30px auto;
     width: 80%;
